# ocaml-trawler

./: .gitignore  .ocamlformat  Makefile  dune  dune-project  ocaml-trawler.opam
cloner/: cloner.ml  dune
lib/: dataset.ml  dataset.mli  dune  file.ml  file.mli  repo.ml  repo.mli  search.ml  search.mli  trawler.ml
updater/: dune  updater.ml
